tests/ui/error-codes/E0434.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/E0434.rs:4:9
   |
LL |         y
   |         ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
